create theme flat

--- a/src/less/variables-bkp.less
+++ b/src/less/variables-bkp.less
@@ -8,8 +8,7 @@
 */
 @gridBorderWidth: 1px;
 @gridBorderRadius: 0px;
-@borderColor: #dddddd;
-@brandColor: #24505D;
+@borderColor: #d4d4d4;
 
 
 /**
@@ -17,7 +16,7 @@
 */
 
 /** @description Colors for header gradient */
-@headerBackgroundColor: #dddddd;
+@headerBackgroundColor: #f3f3f3;
 @headerGradientStart: #eee;
 @headerGradientStop: #fff;
 @headerVerticalBarColor: @borderColor;
@@ -43,16 +42,16 @@
 
 // TODO: color for menu background
 
-@rowSelected: #e0eff9;
+@rowSelected: #C9DDE1;
 @rowSavingForeground: #848484;
 @rowErrorForeground: #FF0000;
 @rowDirtyForeground: #610B38;
 
 // TODO: color for cell selections
-@focusedCell: #b2d9f7;
+@focusedCell: #b3c4c7;
 
 // Color to use for enabled or selected settings/items/cells, etc. Should probably override the one above
-@selectedColor: #e0eff9;
+@selectedColor: #cecece;
 
 /**
 * @section Scrollbar styles
