--- a/src/less/elements.less
+++ b/src/less/elements.less
@@ -7,20 +7,22 @@
 
 .gradient(@color: #F5F5F5, @start: #EEE, @stop: #FFF) {
   background: @color;
-  background: -webkit-gradient(linear,
-                               left bottom,
-                               left top,
-                               color-stop(0, @start),
-                               color-stop(1, @stop));
-  background: -ms-linear-gradient(bottom,
-                                  @start,
-                                  @stop);
-  background: -moz-linear-gradient(center bottom,
-                                   @start 0%,
-                                   @stop 100%);
-  background: -o-linear-gradient(@stop,
-                                 @start);
-  filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",@stop,@start));
+
+  //Theme not use gradient
+  // background: -webkit-gradient(linear,
+  //                              left bottom,
+  //                              left top,
+  //                              color-stop(0, @start),
+  //                              color-stop(1, @stop));
+  // background: -ms-linear-gradient(bottom,
+  //                                 @start,
+  //                                 @stop);
+  // background: -moz-linear-gradient(center bottom,
+  //                                  @start 0%,
+  //                                  @stop 100%);
+  // background: -o-linear-gradient(@stop,
+  //                                @start);
+  // filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",@stop,@start));
 }
 .bw-gradient(@color: #F5F5F5, @start: 0, @stop: 255) {
   background: @color;
