--- a/src/less/custom-layout.less
+++ b/src/less/custom-layout.less
@@ -16,8 +16,11 @@
 }
 .ui-grid-pinned-container.ui-grid-pinned-container-left .ui-grid-cell:last-child {
     border-color: @borderColor !important;
-    i {
-        color: @brandColor;
+}
+.ui-grid-icon-container i {
+    color: @brandColor;
+    &::before {
+        margin-right: 0;
     }
 }
 .ui-grid-pinned-container.ui-grid-pinned-container-left .ui-grid-header-cell:last-child {
@@ -37,33 +40,37 @@
     display: table-cell;
     vertical-align: middle;
     i {
-        margin-right: -2em;
         color: @brandColor;
     }
     &:hover, &:focus, &:active {
         background-color: #f5f5f5;
     }
+
 }
 .ui-grid-menu-button .ui-grid-menu {
     .ui-grid-menu-mid {
-        overflow-y: auto;
         border: none;
     }
 }
 .ui-grid-menu {
-    margin-top: 5px;
+    margin-top: 3px;
     padding: 0;
+    border-top: 2px solid @brandColor;
+    overflow-y: auto;
     .box-shadow(e("0 10px 20px rgba(0, 0, 0, 0.2), inset 0 12px 12px 0 rgba(0, 0, 0, 0.2)"));
+
+}
+.ui-grid-menu-mid {
     &:before {
         content: "";
         position: fixed;
-        right: 4px;
-        margin-top: -7px;
+        display: inline-block;
+        right: 2px;
+        margin-top: -9px;
         border-left: 7px solid transparent;
         border-right: 7px solid transparent;
         border-bottom: 7px solid @brandColor;
-        z-index: 9999999;
-        display: inline-block;
+        z-index: 4;
     }
 }
 .ui-grid-menu .ui-grid-menu-inner {
@@ -72,7 +79,9 @@
     background-color: #f5f5f5;
 }
 .ui-grid-menu .ui-grid-menu-inner ul {
+    min-width: 150px;
     li {
+        padding-right: 23px;
         &:hover {
             background-color: #e5e4e4;
             box-shadow: none;
@@ -80,9 +89,6 @@
         &.ui-grid-menu-item-active {
             box-shadow: none;
             background-color: @selectedColor;
-        }
-        &:first-child {
-            border-top: 2px solid @brandColor;
         }
     }
 }
