--- a/src/less/custom-layout.less
+++ b/src/less/custom-layout.less
@@ -45,7 +45,6 @@
     &:hover, &:focus, &:active {
         background-color: #f5f5f5;
     }
-
 }
 .ui-grid-menu-button .ui-grid-menu {
     .ui-grid-menu-mid {
@@ -58,7 +57,7 @@
     border-top: 2px solid @brandColor;
     overflow-y: auto;
     .box-shadow(e("0 10px 20px rgba(0, 0, 0, 0.2), inset 0 12px 12px 0 rgba(0, 0, 0, 0.2)"));
-
+    z-index: 99;
 }
 .ui-grid-menu-mid {
     &:before {
@@ -90,5 +89,13 @@
             box-shadow: none;
             background-color: @selectedColor;
         }
+    }
+}
+.tr-btn {
+    padding: 2px 6px;
+    margin: 1.5px 0 1.5px 6px;
+    border-radius: 3px;
+    &:focus, &:hover {
+        outline: 0;
     }
 }
