--- a/src/less/custom-layout.less
+++ b/src/less/custom-layout.less
@@ -1,3 +1,6 @@
+.ui-grid {
+    width: 100%;
+}
 .ui-grid-viewport {
     overflow-x: auto !important;
 }
@@ -33,7 +36,6 @@
     top: -1px;
     right: -1px;
     border: none;
-    min-height: 33px;
 }
 .ui-grid-icon-container {
     height: 33px;
@@ -49,6 +51,7 @@
 .ui-grid-menu-button .ui-grid-menu {
     .ui-grid-menu-mid {
         border: none;
+        overflow-y: visible;
     }
 }
 .ui-grid-menu {
