--- a/src/templates/ui-grid/uiGridMenu.html
+++ b/src/templates/ui-grid/uiGridMenu.html
@@ -1,10 +1,10 @@
 <div class="ui-grid-menu" ng-if="shown">
-  <div class="ui-grid-menu-mid" ng-show="shownMid">
+  <div style="{{gridMenuMaxHeight}}" class="ui-grid-menu-mid" ng-show="shownMid">
     <div class="ui-grid-menu-inner">
       <ul class="ui-grid-menu-items">
         <li
           ng-repeat="item in menuItems"
-          ui-grid-menu-item 
+          ui-grid-menu-item
           action="item.action"
           name="item.title"
           active="item.active"
