Alteração na variável de diretório de fontes utilizadas na grid.

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -73,6 +73,6 @@
 /**
 * @section font library path
 */
-@font-path: '';
+@font-path: '../assets/fonts/ui-grid/';
 
 /*-- END VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
